# contextflow-ai

./: .env.example  .gitignore  PLANO_DESENVOLVIMENTO.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 55fadbf3dc3a_create_documents_conversations_and_.py  8ef8b24e0113_create_users_table.py  d99984303723_add_document_chunks_table_and_message_.py
src/: main.py
src/api/dependencies/: auth.py  conversations.py  db.py  documents.py
src/api/middlewares/: error_handling.py
src/api/routes/: auth.py  conversations.py  documents.py
src/api/schemas/: auth.py  conversation.py  document.py
src/application/services/: auth_service.py  conversation_service.py  document_processing_service.py  document_service.py  rag_service.py
src/domain/entities/: chat_message.py  conversation.py  document.py  document_chunk.py  user.py
src/domain/exceptions/: base.py
src/domain/repositories/: conversation_repository.py  document_chunk_repository.py  document_repository.py  embedding_client.py  llm_client.py  user_repository.py
src/infrastructure/: config.py
src/infrastructure/ai/: factory.py  ollama_client.py  ollama_embedding_client.py  openai_client.py  openai_embedding_client.py
src/infrastructure/database/: session.py
src/infrastructure/repositories/: conversation_repository.py  document_chunk_repository.py  document_repository.py  user_repository.py
src/infrastructure/security/: jwt.py  password.py
src/infrastructure/storage/: local_storage.py
src/infrastructure/text/: chunker.py  pdf_extractor.py  reranker.py
(+5 files in other folders)
